# RayTracing

./: .gitmodules  CMakeLists.txt  README.md
common/cppgltf/: cppgltf.h
common/cppimg/: cppimg.h
lray/: Camera.h  Matrix34.h  Matrix44.h  Ray.h  ReferenceCounted.h  Vector3.h  lray.h
lray/accel/: BinQBVH.h
lray/core/: Array.h  Intersection.h  IntrusivePtr.h  LString.h  Random.h  ReferenceCounted.h  Sort.h
lray/math/: AABB.h  Matrix34.h  Plane.h  Quaternion.h  Ray.h  RayTest.h  Sphere.h  Vector3.h  Vector4.h
lray/scene/: Scene.h
lray/shape/: Mesh.h  Node.h  Primitive.h  Triangle.h  TriangleProxy.h
lray/src/: Camera.cpp  Matrix34.cpp  Matrix44.cpp  Quaternion.cpp  Ray.cpp  Vector3.cpp  Vector4.cpp  lray.cpp
lray/src/core/: LString.cpp  Random.cpp
lray/src/math/: AABB.cpp  Matrix34.cpp  Matrix44.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  RayTest.cpp  Sphere.cpp  Vector3.cpp  Vector4.cpp
lray/src/scene/: Scene.cpp
lray/src/shape/: Mesh.cpp  Node.cpp  Primitive.cpp  TriangleProxy.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  TestArray.cpp
tutorial00/: CMakeLists.txt  main.cpp
tutorial01/: CMakeLists.txt  main.cpp
tutorial02/: CMakeLists.txt  main.cpp
tutorial03/: CMakeLists.txt  main.cpp
